// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image default 1`] = `
<img
  alt="crazy cat!"
  height="auto"
  src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif"
  width="auto"
/>
`;

exports[`Storyshots Image loading 1`] = `
<div>
  loading
</div>
`;

exports[`Storyshots Image with image 1`] = `
<img
  alt="crazy cat!"
  height="100%"
  src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif"
  width="100%"
/>
`;

exports[`Storyshots Modal default 1`] = `
Array [
  <button
    className="Modal-close"
    onClick={[Function]}
>
    X
</button>,
  <div
    className="Modal"
>
    <div
        className="Modal-content"
    >
        <img
            alt="crazy cat!"
            height="auto"
            src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif"
            width="auto"
        />
    </div>
</div>,
  <div
    className="Modal-overlay"
/>,
]
`;

exports[`Storyshots Photo sample 1`] = `
<div
  className="Photo"
>
  <div
    className="Photo-thumb"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <img
      alt="crazy cat!"
      height="auto"
      src="https://media.giphy.com/media/mlvseq9yvZhba/giphy.gif"
      width="auto"
    />
  </div>
  <figcaption
    className="Photo-description"
  >
    crazy cat!
  </figcaption>
</div>
`;

exports[`Storyshots Photo with hover 1`] = `
<div
  className="Photo"
>
  <div
    className="Photo-thumb"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <img
      alt="crazy cat!"
      height="auto"
      src="https://media.giphy.com/media/mlvseq9yvZhba/giphy.gif"
      width="auto"
    />
  </div>
  <figcaption
    className="Photo-description Photo-description--hover"
  >
    crazy cat!
  </figcaption>
</div>
`;

exports[`Storyshots Photo with lightbox 1`] = `
<div
  className="Photo"
>
  <div
    className="Photo-thumb"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <img
      alt="crazy cat!"
      height="auto"
      src="https://media.giphy.com/media/mlvseq9yvZhba/giphy.gif"
      width="auto"
    />
  </div>
  <figcaption
    className="Photo-description"
  >
    crazy cat!
  </figcaption>
  <button
    className="Modal-close"
    onClick={[Function]}
  >
    X
  </button>
  <div
    className="Modal"
  >
    <div
      className="Modal-content"
    >
      <img
        alt="crazy cat!"
        height="auto"
        src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif"
        width="auto"
      />
    </div>
  </div>
  <div
    className="Modal-overlay"
  />
</div>
`;

exports[`Storyshots Photo with thumb 1`] = `
<div
  className="Photo"
>
  <div
    className="Photo-thumb"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <img
      alt="crazy cat!"
      height="auto"
      src="https://media.giphy.com/media/mlvseq9yvZhba/giphy.gif"
      width="auto"
    />
  </div>
  <figcaption
    className="Photo-description"
  >
    crazy cat!
  </figcaption>
</div>
`;

exports[`Storyshots Spinner default 1`] = `
<div>
  loading
</div>
`;
